Bot taunts, new settings, bugfixes

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -74,8 +74,7 @@
                 </div>
             </div>
             <div id="judge-controls-area">
-                <input type="button" data-localize-value="ui_btn_vote" value="VOTE" id="btn-judge-pick"
-                    class="lah-btn" />
+                <input type="button" data-localize-value="ui_btn_vote" value="VOTE" id="btn-judge-pick" class="lah-btn" />
             </div>
         </div>
         <div id="hand-area" class="fade fade-up player-only">
@@ -146,6 +145,10 @@
                         <input type="text" id="txt-accent-color" class="lah-txtbox wide"
                             data-localize-placeholder="ui_accent_color_placeholder" autocomplete="off"
                             maxlength="250" />
+                    </div>
+                    <div class="lah-listitem">
+                        <input type="checkbox" id="chk-anim-text" class="lah-checkbox wide" />
+                        <label class="lah-label" for="chk-anim-text" data-ui-string="ui_chk_anim_text"></label>
                     </div>
                     <div class="lah-gap"></div>
                     <div class="lah-listitem">
