Make card accents more customizable

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/lah-common.css" />
     <link rel="stylesheet" type="text/css" href="css/lah-desktop.css" />
     <link rel="stylesheet" type="text/css" href="css/lah-mobile.css" />
+    <style id="card-styles" type="text/css"></style>
     <title>Cards Over LAN</title>
     <script src="js/incantate.js"></script>
     <script src="js/js-cookie.js"></script>
