Decouple string resources from localization code; refactor CSS a bit.

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -8,18 +8,16 @@
     <meta name="msapplication-navbutton-color" content="black">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="css/lah-common.css" />
-    <link rel="stylesheet" type="text/css" href="css/lah-desktop.css" />
-    <link rel="stylesheet" type="text/css" href="css/lah-mobile.css" />
+    <link rel="stylesheet" type="text/css" href="css/colan.css" />
     <style id="card-styles" type="text/css"></style>
     <title>Cards Over LAN</title>
     <script src="js/incantate.js"></script>
     <script src="js/js-cookie.js"></script>
-    <script src="js/lah-strings.js" defer></script>
+    <script src="js/colan-strings.js" defer></script>
     <script src="js/common-ui.js" defer></script>
-    <script src="js/lah-ui.js" defer></script>
+    <script src="js/colan-ui.js" defer></script>
     <script src="js/superior-ws.js" defer></script>
-    <script src="js/lah.js" defer></script>
+    <script src="js/colan.js" defer></script>
 </head>
 
 <body class="preload">
