--- a/web_content/index.html
+++ b/web_content/index.html
@@ -22,12 +22,10 @@
 
 <body class="preload">
     <nav id="navbar" class="mobile-hidden">
-        <h1 class="mobile-only nav-header" data-ui-string="ui_menu_title">Menu</h1>
-        <input type="button" value="About" data-localize-value="ui_about" id="btn-about" class="lah-btn lah-btn-small" data-modal-show="modal-about" />
-        <input type="button" value="Options" data-localize-value="ui_options" id="btn-options"
-            class="lah-btn lah-btn-small" data-modal-show="modal-options" />
-        <input type="button" value="Fullscreen" data-localize-value="ui_fullscreen" id="btn-fullscreen"
-            class="lah-btn lah-btn-small" />
+        <h1 class="mobile-only nav-header" data-ui-string="ui_menu_title"></h1>
+        <input type="button" data-localize-value="ui_about" id="btn-about" class="lah-btn lah-btn-small" data-modal-show="modal-about" />
+        <input type="button" data-localize-value="ui_options" id="btn-options" class="lah-btn lah-btn-small" data-modal-show="modal-options" />
+        <input type="button" data-localize-value="ui_fullscreen" id="btn-fullscreen" class="lah-btn lah-btn-small" />
     </nav>
     <div role="button" id="btn-mobile-nav" class="mobile-btn-menu"></div>
     <div id="game">        
@@ -37,9 +35,9 @@
             <div id="stat-list">
                 <div id="player-count" class="stat" data-localize-title="ui_player_count">--</div>
                 <div id="pending-players" class="stat" data-localize-title="ui_pending_players">--</div>
-                <div id="czar" class="stat" title="Czar" data-localize-title="ui_card_czar">--</div>
-                <div id="score" class="stat player-only" title="Score" data-localize-title="ui_score">--</div>
-                <div id="coins" class="stat player-only" title="Card Coins" data-localize-title="ui_aux_points">--</div>
+                <div id="czar" class="stat" data-localize-title="ui_card_czar">--</div>
+                <div id="score" class="stat player-only" data-localize-title="ui_score">--</div>
+                <div id="coins" class="stat player-only" data-localize-title="ui_aux_points">--</div>
             </div>
         </div>
         <div id="player-list-area">
@@ -141,12 +139,15 @@
                     <div class="lah-listitem">
                         <label class="lah-label" for="txt-accent-color" data-ui-string="ui_accent_color"></label>
                         <input type="text" id="txt-accent-color" class="lah-txtbox wide"
-                            data-localize-placeholder="ui_accent_color_placeholder" autocomplete="off"
-                            maxlength="250" />
+                            data-localize-placeholder="ui_accent_color_placeholder" autocomplete="off" maxlength="150" />
                     </div>
                     <div class="lah-listitem">
                         <input type="checkbox" id="chk-anim-text" class="lah-checkbox wide" />
                         <label class="lah-label" for="chk-anim-text" data-ui-string="ui_chk_anim_text"></label>
+                    </div>
+                    <div class="lah-listitem">
+                        <input type="checkbox" id="chk-notifications" class="lah-checkbox wide" />
+                        <label class="lah-label" for="chk-notifications" data-ui-string="ui_chk_notifications"></label>
                     </div>
                     <div class="lah-gap"></div>
                     <div class="lah-listitem">
@@ -165,7 +166,7 @@
                 <button class="modal-close">&times;</button>
             </div>
             <div class="modal-body">
-                <h1>About</h1>
+                <h1 data-ui-string="ui_about">About</h1>
                 <p>Cards Over LAN <span data-ui-string="ui_version"></span></p>
                 <p>This game is a clone of Cards Against Humanity.</p>
                 <p>
@@ -177,8 +178,7 @@
                 </p>
                 <p>
                     Source code and license information, including licenses for third-party software used in this game,
-                    can be found on <a href="https://github.com/TheBerkin/lan-against-humanity"
-                        target="_blank">GitHub</a>.
+                    can be found on <a href="https://github.com/TheBerkin/lan-against-humanity" target="_blank">GitHub</a>.
                 </p>
             </div>
         </div>
@@ -203,8 +203,8 @@
                         <span class="name" data-ui-string="ui_pack_count"></span>
                     </div>
                     <div class="server-stat" id="join-screen-black-card-count">
-                            <span class="value">--</span>
-                            <span class="name" data-ui-string="ui_black_card_count"></span>
+                        <span class="value">--</span>
+                        <span class="name" data-ui-string="ui_black_card_count"></span>
                     </div>
                     <div class="server-stat" id="join-screen-white-card-count">
                         <span class="value">--</span>
@@ -219,6 +219,11 @@
                     <label class="lah-label" for="txt-join-username" data-ui-string="ui_nickname"></label>
                     <input type="text" id="txt-join-username" class="lah-txtbox wide"
                         data-localize-placeholder="ui_username_placeholder" autocomplete="off" />
+                </div>
+                <div class="lah-listitem">
+                    <label class="lah-label" for="txt-join-password" data-ui-string="ui_game_password"></label>
+                    <input type="password" id="txt-join-password" class="lah-txtbox wide"
+                        data-localize-placeholder="ui_game_password_placeholder" autocomplete="off" />
                 </div>
                 <div class="lah-listitem">
                     <div class="lah-hlist" id="join-controls">
