Self-vote prevention, Ready-Up, bot badges, new cards

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div id="judge-controls-area">
-                <input type="button" data-localize-value="ui_btn_vote" value="VOTE" id="btn-judge-pick" class="lah-btn" />
+                <input type="button" data-localize-value="ui_btn_vote" id="btn-judge-pick" class="lah-btn" />
             </div>
         </div>
         <div id="hand-area" class="fade fade-up player-only">
@@ -108,6 +108,12 @@
                     <div id="game-end-trophies-list" data-localize-data-emptymsg="ui_no_trophies"></div>
                 </div>
             </div>
+        </div>
+        <div id="ready-up-area" class="fade fade-zoom">
+            <div id="ready-up-msg" data-ui-string="ui_ready_up_msg"></div>
+            <input id="btn-ready-up" type="button" class="lah-btn" data-localize-value="ui_btn_ready_up" />
+            <div id="ready-up-votes-label" data-ui-string="ui_ready_up_votes_label"></div>
+            <div id="ready-up-votes-value">--</div>
         </div>
         <div id="notify-banner" class="fade hidden">
             <span id="notify-banner-text">???</span>
